tests/ui/compare-elements-css-color.goml
// This test is to ensure that if "show-text" is false, then it fails.
screenshot-comparison: false
go-to: "file://" + |CURRENT_DIR| + "/" + |DOC_PATH| + "/elements.html"
compare-elements-css: (".content>.right>p", "a", ["color"])
//~^ ERROR: `show-text: true` needs to be used before checking for `color` (otherwise the browser doesn't compute it)
